# titanic-ml

./: .envrc.example  .pylintrc  Makefile  README.md  experiment.ipynb  mypy.ini  pylama.ini  pyproject.toml
.github/: commit_template  pull_request_template.md
.github/.githooks/: pre-push
.github/workflows/: check-and-test.yaml
tests/api/consumer/: test_api_consumer.py
tests/api/provider/: test_api_provider.py
tests/data/: test_titanic.py
tests/ml/: test_model.py
tests/preprocessing/: test_encoder.py  test_parser.py
titanic/api/consumer/: api.py  endpoints.py
titanic/api/provider/: api.py
titanic/api/provider/endpoints/titanic/: models.py  query.py  titanic.py
titanic/data/: enums.py  titanic.py
titanic/ml/: model.py  scheduled_train.py
titanic/ml/models/2021-08-28T22:39:00/: encoder.pkl  model.pkl
titanic/preprocessing/: encoder.py  feature_engineering.py  parser.py
